--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.77.8",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
