--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
     "scss": "^0.2.4"
   },
