006: AuctionCreate, add zod dependency

--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
