--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "javascript-time-ago": "^2.5.10",
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-time-ago": "^7.3.3",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
     "scss": "^0.2.4",
