--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "date-fns": "^3.6.0",
     "javascript-time-ago": "^2.5.10",
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
