--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "date-fns": "^3.6.0",
     "javascript-time-ago": "^2.5.10",
     "js-cookie": "^3.0.5",
+    "laravel-echo": "^1.16.1",
     "next": "14.2.5",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
